# qt6-switch-demo

./: .gitignore  .gitmodules  AGENTS.md  README.md
.codex/skills/qt6-switch-port/: SKILL.md
.codex/skills/qt6-switch-port/agents/: openai.yaml
.codex/skills/qt6-switch-port/references/: network-tls.md
.github/workflows/: build-demos.yml
cmake/: QtSwitchBatch.cmake
demo/qt-module-test/: Makefile  README.md  main.cpp
demo/qt-network-test/: Makefile  README.md  main.cpp  network-test.qrc
demo/qt-network-test/assets/: README.md
demo/qt-switch-batch/: CMakeLists.txt  README.md  qtbase-broad-manifest.txt  qtbase-extra-manifest.txt  qtbase-manifest.txt  qtbase-misc-manifest.txt  qtbase-serialization-manifest.txt  qtbase-text-manifest.txt  qtbase-thread-manifest.txt  qtbase-value-manifest.txt  qtdeclarative-extra-manifest.txt  qtdeclarative-manifest.txt  qtdeclarative-meta-manifest.txt  qtdeclarative-v4-manifest.txt
demo/qt-ultimate-test/: Makefile  README.md  bulk_tests.cpp  core_extended.cpp  extended_tests.h  gui_extended.cpp  main.cpp  qml_extended.cpp  quick_extended.cpp  upstream_cases.cpp  widgets_extended.cpp
demo/quick-app/: Makefile  main.cpp
demo/webengine-app/: Makefile  main.cpp
demo/widgets-app/: Makefile  README.md  main.cpp
docs/: astris-testing.md  batch-test-status.md  build-and-run.md  development-environment.md  downloads.md  feature-port-matrix.md  github-publishing.md  qtwebengine-port.md  ryubing-development.md  testing-strategy.md  what-changed.md
extras/: toolchain-switch.cmake
patches/: 0001-feat-add-switch-qtbase-port-patches.patch  0002-feat-bring-up-switch-qt-runtime.patch  0003-feat-support-qtwidgets-on-switch.patch  0004-feat-embed-switch-default-font.patch  openssl-3.0.16-switch-rng.patch  ryubing-sendmmsg-udp-destination.patch  ryubing-thread-limit-diagnostics.patch
scripts/: apply-qtbase-patches.sh  build-host-qt-test-tools.sh  build-host-qt-tools.sh  build-host-qtdeclarative-tools.sh  build-host-qtshadertools-tools.sh  build-openssl-switch.sh  build-qt-module-test.sh  build-qt-network-test.sh  build-qt-switch-batches.sh  build-qtbase-switch-tests.sh  build-qtbase-switch.sh  build-qtdeclarative-switch.sh  build-qtshadertools-switch.sh  build-qtwebengine-switch.sh  build-quick-probe.sh  build-ryubing.sh  build-webengine-probe.sh  build-widgets-probe.sh  configure-qtbase-switch-tests.sh  configure-qtbase-switch.sh  configure-qtdeclarative-switch.sh  configure-qtshadertools-switch.sh  configure-qtwebengine-switch.sh  devkit-image.sh  dotnet-env.sh  generate-qt-artifacts.sh  launch-local-ryubing.sh  launch-qt-demo-ryubing.sh  package-qt-switch-batches.sh  run-qt-module-test-ryubing.sh  run-qt-network-test-astris.sh  run-qt-network-test-ryubing.sh  run-qt-switch-batch-case-ryubing.sh  run-qt-switch-batch-ryubing.sh  run-qt-test-ryubing.sh  run-qt6-switch-module-test-astris.sh  run-qt6-switch-quick-probe-astris.sh  run-qt6-switch-webengine-probe-astris.sh  run-qt6-switch-widgets-probe-astris.sh  run-qtbase-switch-corelib-tests-ryubing.sh  (+2 more)
